syntax = "proto3";

message AddressProto {
    string Street=1;
    string Suburb=2;
    string City=3;
    string Code=4;
}

message PersonProto_v2 {
    string Name = 1;
    string Surname = 2;
    int32 Id = 3;
    int64 Birthdate = 4;
    AddressProto Address = 6;
    repeated string Phone = 7;
    repeated AddressProto Addresses=8;
}